de vorige achtergrond was beter

--- a/static/style.css
+++ b/static/style.css
@@ -1,2 +1,2 @@
-/*body {background: lightsteelblue;}*/
-body {background: moccasin;}
+body {background: lightsteelblue;}
+/*body {background: moccasin;}*/
