--- a/static/style.css
+++ b/static/style.css
@@ -1,2 +1,3 @@
-body {background: lightsteelblue;}
+/*body {background: lightsteelblue;}*/
 /*body {background: moccasin;}*/
+body {background: greenyellow;}
