--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,3 @@
-/*body {background: lightsteelblue;}*/
+body {background: lightsteelblue;}
 /*body {background: moccasin;}*/
-body {background: greenyellow;}
+/*body {background: greenyellow;}*/
